--- a/CameraDemo/CameraDemo.csproj
+++ b/CameraDemo/CameraDemo.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\CameraBLL.cs" />
     <Compile Include="Model\Camera\ICamera.cs" />
     <Compile Include="Model\NetSvr\INetSvr.cs" />
     <Compile Include="Model\NetSvr\IpadEP.cs" />
@@ -80,9 +81,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controller\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
