--- a/UdpDriver/UdpDriver.csproj
+++ b/UdpDriver/UdpDriver.csproj
@@ -40,13 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoConnect\AutoConn.cs" />
     <Compile Include="IUdp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UdpCommand.cs" />
-    <Compile Include="UdpFile.cs" />
-    <Compile Include="UdpPhoto.cs" />
-    <Compile Include="UdpText.cs" />
+    <Compile Include="TextManager\UdpCommand.cs" />
+    <Compile Include="FileManager\UdpFile.cs" />
+    <Compile Include="FileManager\UdpPhoto.cs" />
+    <Compile Include="TextManager\UdpText.cs" />
     <Compile Include="Util.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="StatusCheck\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
