--- a/UdpDriver/UdpDriver.csproj
+++ b/UdpDriver/UdpDriver.csproj
@@ -43,15 +43,14 @@
     <Compile Include="AutoConnect\AutoConn.cs" />
     <Compile Include="IUdp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusCheck\StatusCheck.cs" />
     <Compile Include="TextManager\UdpCommand.cs" />
     <Compile Include="FileManager\UdpFile.cs" />
     <Compile Include="FileManager\UdpPhoto.cs" />
     <Compile Include="TextManager\UdpText.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="StatusCheck\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
