--- a/UdpDriver/UdpDriver.csproj
+++ b/UdpDriver/UdpDriver.csproj
@@ -41,12 +41,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoConnect\AutoConn.cs" />
+    <Compile Include="AutoConnect\test.cs" />
+    <Compile Include="FileManage\FileAttributes.cs" />
+    <Compile Include="FileManage\FileUnit.cs" />
+    <Compile Include="FileManage\SerializeFile.cs" />
+    <Compile Include="FileManage\UdpFileRes.cs" />
+    <Compile Include="FileManage\UdpFileSend.cs" />
     <Compile Include="IUdp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatusCheck\StatusCheck.cs" />
     <Compile Include="TextManager\UdpCommand.cs" />
-    <Compile Include="FileManager\UdpFile.cs" />
-    <Compile Include="FileManager\UdpPhoto.cs" />
+    <Compile Include="FileManage\FileManager.cs" />
+    <Compile Include="FileManage\UdpPhoto.cs" />
     <Compile Include="TextManager\UdpText.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
